--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div class="container">
 <div class="card text-center">
-  <h2>My Favourites</h2>
+  <h2>Top-Five Movies</h2>
   <table id="movies">
     <tr>
       <td>
