make my profile prettier

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="card text-center">
       <img src="images/bio.png" alt="profile" id="avatar" class="img-circle">
 
-      <h1>Lucas Porter-Bakker</h1>
+      <h1 id="name-margin">Lucas Porter-Bakker</h1>
       <ul class="list-inline">
         <li class="text-center"><a href="https://www.linkedin.com/in/lucasporterbakker/"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
         <li class="text-center"><a href="https://github.com/lucasporterbakker"><i class="fa fa-github"></i> GitHub</a></li>
