make my profile prettier

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="card text-center">
         <img src="images/westgroup.png" alt="profile" id="company-pic" class="img-circle">
-        <h2>CEO // Westgroup</h2>
+        <h2 id="company-heading">CEO // Westgroup</h2>
         <p>I founded Westgroup | 西思路 along with six co-founders; which we established as a wholly foreign-owned enterprise (WFOE) in Hangzhou, China. During my time as the CEO, Westgroup went from being newly licensed to the foremost Canadian education company in Zhejiang Province - having taught thousands of students - and expanded operations into marketing, training, and technology. Westgroup has worked with Chinese governmental organizations, state-owned enterprises, both Canadian and Chinese companies and businesses, universities, and now manages a portfolio of 100+ private clients. We also collaborated on numerous G20 projects with the Chinese government and won the national public bid for Xiaoshan International Airport.</p>
         <a href="https://westgrouphangzhou.com" class="btn-red"><em>Have a look!</em></a>
       </div>
