make my profile prettier

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <img src="images/westgroup.png" alt="profile" id="company-pic" class="img-circle">
       <h2 id="company-heading">FOUNDER and CEO // Westgroup</h2>
       <p>I founded Westgroup | 西思路 along with six co-founders; which we established as a wholly foreign-owned enterprise (WFOE) in Hangzhou, China. During my time as the CEO, Westgroup went from being newly licensed to the foremost Canadian education company in Zhejiang Province - having taught thousands of students - and expanded operations into marketing, training, and technology. Westgroup has worked with Chinese governmental organizations, state-owned enterprises, both Canadian and Chinese companies and businesses, universities, and now manages a portfolio of 100+ private clients. We also collaborated on numerous G20 projects with the Chinese government and won the national public bid for Xiaoshan International Airport.</p>
-      <a href="https://westgrouphangzhou.com" class="btn-red"><em>Website</em></a>
+      <a href="https://westgrouphangzhou.com" class="btn-red"></a>
     </div>
   </div>
 
@@ -34,7 +34,7 @@
       <img src="images/goji.png" alt="profile" id="company-pic" class="img-circle">
       <h2 id="company-heading">FOUNDER and CEO // GOJI</h2>
       <p>GOJI is an online ESL marketplace and learning service provider; connecting language students from all over the world to native English-speaking tutors. The mobile platform currently has over 10,000 tutors and students from more than 150 countries.</p>
-      <a href="https://gojinet.com" class="btn-teal"><em>Website</em></a>
+      <a href="https://gojinet.com" class="btn-teal"></a>
     </div>
   </div>
 
@@ -51,7 +51,7 @@
         • North America
         • Eastern & Western Europe
         • Latin America</p>
-      <a href="https://lucasporterbakker.com/" class="btn-black"><em>Website</em></a>
+      <a href="https://lucasporterbakker.com/" class="btn-black"></a>
     </div>
   </div>
 
