make my profile prettier

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
     <div class="card text-center">
       <img src="images/black.png" alt="profile" id="company-pic" class="img-circle">
       <h2 id="company-heading">Award-Winning Photographer</h2>
-      <p>Freelance photography projects in over 50 countries since 2007; regions include:
-        • North Africa
-        • The Balkans
+      <p id="photography-block">Freelance photography projects in over 50 countries since 2007; regions include:<br><br>
+        North Africa
         • Asia-Pacific
+        • Latin America
+        • The Balkans
         • Southern Asia
         • South-Eastern Asia
         • North America
-        • Eastern & Western Europe
-        • Latin America</p>
+        • Western & Eastern Europe</p>
       <a href="https://lucasporterbakker.com/" class="btn-black">Website</a>
     </div>
   </div>
@@ -61,38 +61,38 @@
       <table id="movies">
         <tr>
           <td>
-            <h3>The Godfather</h3>
+            <h3 id="movie-title">The Godfather</h3>
             <img src="images/The Godfather.jpg" id="movie-cover" alt="The Godfather">
-            <p>The aging patriarch of an organized crime dynasty transfers control of his clandestine empire to his reluctant son.</p>
+            <p id="movie-descirption">The aging patriarch of an organized crime dynasty transfers control of his clandestine empire to his reluctant son.</p>
           </td>
         </tr>
 
         <tr>
           <td>
-            <h3>Walk Hard: The Dewey Cox Story</h3>
+            <h3 id="movie-title">Walk Hard: The Dewey Cox Story</h3>
             <img src="images/Walk Hard  The Dewey Cox Story.jpg" id="movie-cover" alt="Walk Hard: The Dewey Cox Story">
-            <p>Singer Dewey Cox overcomes adversity to become a musical legend.</p>
+            <p id="movie-descirption">Singer Dewey Cox overcomes adversity to become a musical legend.</p>
           </td>
         </tr>
         <tr>
           <td>
-            <h3>Sicario</h3>
+            <h3 id="movie-title">Sicario</h3>
             <img src="images/Sicario.jpg" id="movie-cover" alt="Sicario">
-            <p>An idealistic FBI agent is enlisted by a government task force to aid in the escalating war against drugs at the border area between the U.S. and Mexico.</p>
+            <p id="movie-descirption">An idealistic FBI agent is enlisted by a government task force to aid in the escalating war against drugs at the border area between the U.S. and Mexico.</p>
           </td>
         </tr>
         <tr>
           <td>
+            <h3 id="movie-title">The Life Aquatic with Steve Zissou</h3>
             <img src="images/The Life Aquatic with Steve Zissou.jpg" id="movie-cover" alt="The Life Aquatic with Steve Zissou">
-            <h3>The Life Aquatic with Steve Zissou</h3>
-            <p>With a plan to exact revenge on a mythical shark that killed his partner, oceanographer Steve Zissou rallies a crew that includes his estranged wife, a journalist, and a man who may or may not be his son.</p>
+            <p id="movie-descirption">With a plan to exact revenge on a mythical shark that killed his partner, oceanographer Steve Zissou rallies a crew that includes his estranged wife, a journalist, and a man who may or may not be his son.</p>
           </td>
         </tr>
         <tr>
           <td>
+            <h3 id="movie-title">Good Will Hunting</h3>
             <img src="images/Good Will Hunting.jpg" id="movie-cover" alt="Good Will Hunting">
-            <h3>Good Will Hunting</h3>
-            <p>Will Hunting, a janitor at M.I.T., has a gift for mathematics, but needs help from a psychologist to find direction in his life.</p>
+            <p id="movie-descirption">Will Hunting, a janitor at M.I.T., has a gift for mathematics, but needs help from a psychologist to find direction in his life.</p>
           </td>
         </tr>
       </table>
