make my profile prettier

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <ul class="list-inline">
         <li class="text-center"><a href="https://www.linkedin.com/in/lucasporterbakker/"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
         <li class="text-center"><a href="https://github.com/lucasporterbakker"><i class="fa fa-github"></i> GitHub</a></li>
+        <li class="text-center"><a href="https://www.instagram.com/porterbakker/"><i class="fa fa-instagram"></i> Instagram</a></li>
       </ul>
     </div>
   </div>
@@ -102,9 +103,8 @@
   <div class="container">
     <div class="card text-center">
       <h2>About this page</h2>
-      "
       This page was coded during the:
-      <a href="https://lewagon.com/program target="_blank>FullStack program @LeWagon"</a>
+      <a href="https://lewagon.com/program target="_blank>FullStack program @LeWagon</a>
       <ul class="list-inline">
         <li>
           <a href="#">
