make my profile prettier

--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
+
+
 <html>
 <head>
   <meta charset="utf-8">
   <title>My Profile</title>
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="container">
+<div class="bg-image">
+
+
+
     <div class="card text-center">
+      <div class="container first-card-top-margin">
       <img src="images/bio.png" alt="profile" id="avatar" class="img-circle">
 
       <h1 id="name-margin">Lucas Porter-Bakker</h1>
@@ -19,7 +26,6 @@
         <li class="text-center"><a href="https://www.instagram.com/porterbakker/"><i class="fa fa-instagram"></i> Instagram</a></li>
       </ul>
     </div>
-  </div>
 
   <div class="container">
     <div class="card text-center">
@@ -129,6 +135,7 @@
         </li>
       </ul>
     </div>
+  </div>
   </div>
 </body>
 </html>
